name:                rzk-js
version:             0.1.0
synopsis:            A serverless online version of Rzk proof assistant
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rzk-js
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  build-depends:       base, rzk, text >=1.2.3.1
  if impl(ghcjs)
    build-depends:
      ghcjs-base, ghcjs-prim
  default-language:    Haskell2010
