name:                try-rzk
version:             0.1.0
synopsis:            A serverless online version of Rzk proof assistant
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable try-rzk
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  build-depends:       base, miso, rzk
  default-language:    Haskell2010
